--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
+/* GLOBAL */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Helvetica Neue", -apple-system, BlinkMacSystemFont,
+    "Helvetica Neue", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Helvetica Neue", source-code-pro, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: 300;
+  margin-left: 40px;
+}
+
+button {
+  font-family: "Helvetica Neue";
+  cursor: pointer;
+}
+
+input {
+  font-family: "Helvetica Neue";
+}
+
+.checked {
+  text-decoration: line-through;
+}
+
+/* HEADER */
+
+.header {
+  display: flex;
+  align-items: center;
+  height: 195px;
+  border-bottom: 2px solid #e5e5e5;
+}
+
+.list-icon {
+  font-size: 75px;
+  margin-left: 69px;
+  color: #5c47d3;
+}
+
+/* LIST */
+
+.delete-button {
+  border: none;
+  background-color: transparent;
+}
+
+.trash-icon {
+  color: #5c48d3;
+  font-size: 17px;
+}
+
+span {
+  font-size: 20px;
+}
+
+/* FORM */
+form {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+/* TASKS */
+
+.tasks {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.add-task {
+  width: 548px;
+  height: 65px;
+  background: #f2f7fd;
+  border: 1px solid #5c48d3;
+  box-sizing: border-box;
+  border-radius: 10px;
+  outline: none;
+  font-size: 22px;
+  padding: 30px;
+  box-sizing: border-box;
+}
+
+.button-add {
+  height: 65px;
+  padding: 30px;
+  border-radius: 10px;
+  border: none;
+  background-color: #5c48d3;
+  color: white;
+  font-size: 20px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+
+/* FOOTER */
+
+.footer {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
 }
