--- a/src/index.css
+++ b/src/index.css
@@ -69,15 +69,21 @@ span {
 form {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 100px;
 }
 
 /* TASKS */
 
 .tasks {
-  margin-top: 100px;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.task {
+  margin-bottom: 15px;
+  display: flex;
   align-items: center;
 }
 
@@ -111,7 +117,7 @@ form {
 /* FOOTER */
 
 .footer {
-  margin-top: 100px;
+  margin-top: 150px;
   display: flex;
   justify-content: center;
 }
