--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,45 @@ a:hover {
   color: #5c49d3;
   text-decoration: underline;
 }
+
+/* MEDIA QUERIES */
+
+@media (max-width: 768px) {
+  /* HEADER */
+
+  .header {
+    justify-content: center;
+  }
+  h1 {
+    font-size: 40px;
+  }
+
+  .list-icon {
+    margin-left: 0;
+  }
+
+  /* LIST */
+
+  span {
+    font-size: 17px;
+  }
+
+  /* TAKS  */
+
+  .add-task {
+    width: 250px;
+    height: 50px;
+    font-size: 17px;
+  }
+
+  .button-add {
+    height: 50px;
+    width: 100px;
+    font-size: 17px;
+  }
+  /* FOOTER */
+
+  .footer p {
+    font-size: 15px;
+  }
+}
